# Clinic_Test

./: Dockerfile  README.md  baseline.py  environment.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
sample_reports/: patient_001_Healthy.txt  patient_002_Breast_Cancer.txt  patient_003_Breast_Cancer.txt  patient_004_Type_2_Diabetes.txt  patient_005_Type_1_Diabetes.txt  patient_006_Asthma.txt  patient_007_Asthma.txt  patient_008_Type_1_Diabetes.txt  patient_009_Asthma.txt  patient_010_Non_Small_Cell_.txt  patient_011_Asthma.txt  patient_012_Asthma.txt  patient_013_Healthy.txt  patient_014_Healthy.txt  patient_015_Non_Small_Cell_.txt  patient_016_Severe_Hyperten.txt  patient_017_Non_Small_Cell_.txt  patient_018_Healthy.txt  patient_019_Breast_Cancer.txt  patient_020_Healthy.txt  patient_021_Hypertension.txt  patient_022_Breast_Cancer.txt  patient_023_Type_1_Diabetes.txt  patient_024_Breast_Cancer.txt  patient_025_Hypertension.txt  patient_026_Type_2_Diabetes.txt  patient_027_Asthma.txt  patient_028_Hypertension.txt  patient_029_Breast_Cancer.txt  patient_030_Severe_Hyperten.txt  patient_031_Severe_Hyperten.txt  patient_032_Healthy.txt  patient_033_Type_1_Diabetes.txt  patient_034_Autoimmune_Dise.txt  patient_035_Type_1_Diabetes.txt  patient_036_Severe_Hyperten.txt  patient_037_Type_1_Diabetes.txt  patient_038_Hypertension.txt  patient_039_Autoimmune_Dise.txt  patient_040_Healthy.txt  (+51 more)
server/: app.py
